--- a/day_6/index.html
+++ b/day_6/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html >
+<html>
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <section id="meals"></section>
+        <section id="tray"></section>
         
         <script src="index.js"></script>
     </body>
